# aws-ticketing-system

./: ABOUT.md  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
card_templates/: ticket_card.json  ticket_update.json
