[tool.poetry]
name = "aws-ticketing-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
beautifulsoup4 = "^4.12.3"
regex = "^2023.12.25"
install = "^1.3.5"
boto3 = "^1.34.41"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
